--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,7 @@
   ],
   "parser": "@typescript-eslint/parser",
   "scripts": {
-    "lint": "eslint --fix --quiet --ext .ts,.tsx src",
+    "lint": "eslint --fix --quiet --ext .js,.jsx src",
     "prepare": "husky install"
   },
   "rules": {
